<?xml version="1.0"?>
<package format="2">
  <name>tam_hsr_controller</name>
  <version>0.0.1</version>
  <description>The tam_hsr_controller package</description>

  <maintainer email="yano.yuuga158@mail.kyutech.jp">Yuga Yano</maintainer>

  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>

  <depend>class_loader</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>tmc_msgs</depend>

  <depend>qtbase5-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>
